--- a/hopsworks-web/yo/app/nav.html
+++ b/hopsworks-web/yo/app/nav.html
@@ -51,7 +51,10 @@
       </button>
       <div style="padding-right: 55px">
         <a class="navbar-brand" href="#home" style="font-family: Lobster; font-size: 30px; color: #fff;">Hopsworks
-          <img alt="hops icon" class="pull-right" style="margin-left:10px;" width="25" src="images/hops.png"/>
+          <img alt="hops icon" class="pull-right" style="margin-left:10px;" width="25" src="images/hops.png"/
+        </a>
+        <a class="navbar-brand" href="https://eo4society.esa.int/thematic-exploitation-platforms-overview/">
+          <img alt="polar tap icon" class="pull-right" height="25" src="images/tep_dark_300dpi_B.png"/>
         </a>
         <div class="input-group" ng-show="showHamburger">
           <button type="button" class="hamburger is-open" style="color:white;" data-toggle="offcanvas" ng-click="projectCtrl.isClosed = !projectCtrl.isClosed">
